--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,8 +1,18 @@
 body{
   margin: 10px;
+  background-image: url('../../../assets/img/background.jpg');
 }
 div{
   height: 20vh;
+  float: left;
+}
+
+#tag{
+  width: 80%;
+}
+
+.sidebar{
+  width: 10%;
 }
 
 .txtEdit{
