--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
     <script src="home.js"></script>
   </head>
   <body>
-    <form action="/search-result" ng-submit="searchProcess($event)" name="Search">
+    <form>
       <div><h3>Search...</h3></div>
       <div><input type="text" name="location" placeholder="Jakarta"></div>
       <div><input type="date" name="date" data-provide="datepicker"></div>
