--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,30 +5,30 @@
   <title>Login Page</title>
 </head>
 <body>
-<form>
+<form (submit)="registerValidate()">
   <table align="center">
     <tr>
       <th colspan="2">Registration</th>
     </tr>
     <tr>
-      <td>First Name:</td>
-      <td><input type="text" name="firstName"></td>
-    </tr>
-    <tr>
-      <td>Last Name:</td>
-      <td><input type="text" name="lastName"></td>
-    </tr>
-    <tr>
-      <td>Username:</td>
-      <td><input type="text" name="username"></td>
-    </tr>
-    <tr>
-      <td>Password:</td>
-      <td><input type="password" name="password"></td>
+      <td>Name:</td>
+      <td><input type="text" [(ngModel)]= "formData.name" name="name"></td>
     </tr>
     <tr>
       <td>Email:</td>
-      <td><input type="email" name="email"></td>
+      <td><input type="email" [(ngModel)]= "formData.email" name="email"></td>
+    </tr>
+    <tr>
+      <td>Username:</td>
+      <td><input type="text" [(ngModel)]= "formData.username" name="username"></td>
+    </tr>
+    <tr>
+      <td>Password:</td>
+      <td><input type="password" [(ngModel)]= "formData.password" name="password"></td>
+    </tr>
+    <tr>
+      <td>Phone</td>
+      <td><input type="number" [(ngModel)]= "formData.phone" name="phone"></td>
     </tr>
     <tr>
       <td colspan="2" align="center"><input type="submit" value="Register"></td>
