--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
 <body>
   <form (submit)="loginValidate()">
     <h2>Login Page</h2><br>
-    Username: <input type="text" name="name" [(ngModel)]= "formData.username" placeholder="username"> <br>
+    Email: <input type="text" name="name" [(ngModel)]= "formData.email" placeholder="Email"> <br>
     Password: <input type="password" [(ngModel)]= "formData.password" name="password" placeholder="password..."> <br>
     <input type="submit" value="Login">
   </form>
