--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,12 +6,12 @@
   </head>
   <body>
   <div id="tag">
-    <h2>Hotel Mayor</h2>
+    <h2><a href="/">Hotel Mayor</a></h2>
   </div>
-  <div class="sidebar" *ngIf="getLogin()"><a href="/editProfile">Edit Profile</a></div>
-  <div class="sidebar" *ngIf="!getLogin()"><a href="/login">Login</a></div>
-  <div class="sidebar" *ngIf="!getLogin()"><a href="/" (click)="logout()">Logout</a></div>
-  <div class="sidebar" *ngIf="getLogin()"><a href="/register">Register</a></div>
+  <div class="sidebar" *ngIf="!loggedIn"><a href="/editProfile">Edit Profile</a></div>
+  <div class="sidebar" *ngIf="!loggedIn"><a href="/login">Login</a></div>
+  <div class="sidebar" *ngIf="loggedIn"><a href="/" (click)="logout()">Logout</a></div>
+  <div class="sidebar" *ngIf="loggedIn"><a href="/register">Register</a></div>
 
 
 
