--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -3,6 +3,11 @@ body{
   text-align: center;
 }
 
-body form div{
-  padding: 10px;
+/*body form div{*/
+  /*padding: 10px;*/
+/*}*/
+
+#search-box{
+  height: 20%;
+  width: 50%;
 }
